src/generator/snapshots/bevy_state_plugin_generator__generator__tests__naming_scheme@root.txt.snap
---
source: src/generator/tests.rs
expression: "generate_state_plugin_source(src_path, source, PluginConfig\n{ naming_scheme, ..Default::default() }).unwrap_or_else(identity)"
---
// generated by bevy_state_plugin_generator vCARGO_PKG_VERSION
// src: root.txt
// RootState

#![allow(missing_docs)]
use bevy::prelude::AppExtStates;
pub mod states {
    use bevy::prelude::StateSet;
    #[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
    pub enum RootState {
        #[default]
        RootState
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(RootState = RootState::RootState)]
    pub struct RootRootState;
}
pub struct GeneratedStatesPlugin;
impl bevy::app::Plugin for GeneratedStatesPlugin {
    fn build(&self, app: &mut bevy::app::App) {
        app.init_state::<states::RootState>()
            .add_sub_state::<states::RootRootState>()
        ;
    }
}
