src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot1.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::singleton(\"Alpha\"), ParentState\n{ name: \"GameState\".to_string(), variant: \"Alpha\".to_string() }.into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Alpha)]
pub struct Alpha;
