src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot1@snapshot1.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::singleton(\"Alpha\"),\nParentState::new(\"GameState\", \"Alpha\").into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Alpha)]
pub struct AlphaState;
